--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   path: ^1.8.3
   app_links: ^3.4.3
   flutter_custom_tabs: ^1.0.4
+  flutter_local_notifications: ^15.0.0
 
 # https://github.com/flutter/flutter/issues/127425
 dependency_overrides:
